--- a/index.html
+++ b/index.html
@@ -37,73 +37,24 @@
     <main style="display: grid; grid-template-columns: auto 1fr auto">
       <aside class="left">
         <h2>Parts</h2>
-        <ol id="Parts">
-          <li>
-            <a href="./barcode/index.html" onclick="openPart(event)">barcode</a>
-          </li>
-          <li>
-            <a href="./kv-form/index.html" onclick="openPart(event)">kv-form</a>
-          </li>
-          <li>
-            <a href="./kv-gantt/index.html" onclick="openPart(event)"
-            >kv-gantt</a>
-          </li>
-          <li>
-            <a href="./kv-gauge/index.html" onclick="openPart(event)"
-            >kv-gauge</a>
-          </li>
-          <li>
-            <a href="./kv-pair/index.html" onclick="openPart(event)">kv-pair</a>
-          </li>
-          <li>
-            <a href="./kv-params/index.html" onclick="openPart(event)"
-            >kv-params</a>
-          </li>
-          <li>
-            <a href="./kv-pick/index.html" onclick="openPart(event)">kv-pick</a>
-          </li>
-          <li>
-            <a href="./kv-table/index.html" onclick="openPart(event)"
-            >kv-table</a>
-          </li>
-          <li>
-            <a href="./kv-tags/index.html" onclick="openPart(event)">kv-tags</a>
-          </li>
-          <li>
-            <a href="./kv-timeline/index.html" onclick="openPart(event)"
-            >kv-timeline</a>
-          </li>
-          <li>
-            <a href="./kvAutocomplete/index.html" onclick="openPart(event)"
-            >kvAutocomplete</a>
-          </li>
-          <li>
-            <a href="./kvCart/index.html" onclick="openPart(event)">kvCart</a>
-          </li>
-          <li>
-            <a href="./kvImportData/index.html" onclick="openPart(event)"
-            >kvImportData</a>
-          </li>
-          <li>
-            <a href="./kvJSONForm/index.html" onclick="openPart(event)"
-            >kvJSONForm</a>
-          </li>
-          <li>
-            <a href="./kvProductionLine/index.html" onclick="openPart(event)"
-            >kvProductionLine</a>
-          </li>
-          <li>
-            <a href="./kvSelect/index.html" onclick="openPart(event)"
-            >kvSelect</a>
-          </li>
-          <li>
-            <a href="./kvSelections/index.html" onclick="openPart(event)"
-            >kvSelections</a>
-          </li>
-          <li>
-            <a href="./kvTags/index.html" onclick="openPart(event)">kvTags</a>
-          </li>
-        </ol>
+        <ol id="Parts"><li><a href="./barcode/index.html" onclick="openPart(event)">barcode</a></li>
+<li><a href="./kv-form/index.html" onclick="openPart(event)">kv-form</a></li>
+<li><a href="./kv-gantt/index.html" onclick="openPart(event)">kv-gantt</a></li>
+<li><a href="./kv-gauge/index.html" onclick="openPart(event)">kv-gauge</a></li>
+<li><a href="./kv-pair/index.html" onclick="openPart(event)">kv-pair</a></li>
+<li><a href="./kv-params/index.html" onclick="openPart(event)">kv-params</a></li>
+<li><a href="./kv-pick/index.html" onclick="openPart(event)">kv-pick</a></li>
+<li><a href="./kv-table/index.html" onclick="openPart(event)">kv-table</a></li>
+<li><a href="./kv-tags/index.html" onclick="openPart(event)">kv-tags</a></li>
+<li><a href="./kv-timeline/index.html" onclick="openPart(event)">kv-timeline</a></li>
+<li><a href="./kvAutocomplete/index.html" onclick="openPart(event)">kvAutocomplete</a></li>
+<li><a href="./kvCart/index.html" onclick="openPart(event)">kvCart</a></li>
+<li><a href="./kvImportData/index.html" onclick="openPart(event)">kvImportData</a></li>
+<li><a href="./kvJSONForm/index.html" onclick="openPart(event)">kvJSONForm</a></li>
+<li><a href="./kvProductionLine/index.html" onclick="openPart(event)">kvProductionLine</a></li>
+<li><a href="./kvSelect/index.html" onclick="openPart(event)">kvSelect</a></li>
+<li><a href="./kvSelections/index.html" onclick="openPart(event)">kvSelections</a></li>
+<li><a href="./kvTags/index.html" onclick="openPart(event)">kvTags</a></li></ol>
       </aside>
       <iframe
         name="Part"
